backend - feat: added user authentication
