# backend/src/server.ts
@@ -1,12 +1,11 @@
-// import AuthRoute from '@routes/auth.route';
+import AuthRoute from '@routes/auth.route';
 import IndexRoute from '@routes/index.route';
 import UsersRoute from '@routes/users.route';
 import validateEnv from '@utils/validateEnv';
-import App from '@/app';
+import App from './app';
 
 validateEnv();
 
-// const app = new App([new IndexRoute(), new UsersRoute(), new AuthRoute()]);
-const app = new App([new IndexRoute(), new UsersRoute()]);
+const app = new App([new IndexRoute(), new UsersRoute(), new AuthRoute()]);
 
 app.listen();
